fix spacing

--- a/src/styles/landing/footer.scss
+++ b/src/styles/landing/footer.scss
@@ -110,7 +110,7 @@
     border-radius: $input-border-radius-lg $input-border-radius-lg 0 0;
     font-size: 13px;
     font-weight: $weight-normal;
-    padding: 6px 9px;
+    padding: 6px 15px 6px 9px;
     pointer-events: none;
     user-select: none;
 
